GNOME Bugzilla – Bug 725124
rtspsrc: Fix deadlock when task creation is no successful
Last modified: 2014-02-28 08:37:10 UTC
Function in charge of creating the task might return without releasing the object mutex, this patch releases it in order to prevent deadlocks when task can not be created. This patch also applies to version 1.2 and 1.0.
Created attachment 270224 [details] [review] patch
commit b9a953161f23888c04b9c046259202bbbe443466 Author: Santiago Carot-Nemesio <sancane@gmail.com> Date: Tue Feb 25 09:00:45 2014 +0100 rtspsrc: Fix deadlock when task creation is no successful https://bugzilla.gnome.org/show_bug.cgi?id=725124