rtspsrc: Fix deadlock when task creation is no successful

https://bugzilla.gnome.org/show_bug.cgi?id=725124